--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "animejs": "^3.2.1",
-    "next": "11.1.2",
+    "next": "^12.2.0",
     "react": "17.0.2",
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "17.0.2",
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/animejs": "^3.1.4",
+    "@types/node": "^18.0.0",
     "@types/react": "17.0.30",
     "@types/react-transition-group": "^4.4.4",
     "@types/styled-components": "^5.1.15",
